--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql": "^2.17.1",
     "nodemailer": "^6.2.1",
     "randomstring": "^1.1.5",
-    "simplescrollup": "^1.1.0"
+    "simplescrollup": "^1.1.0",
+    "socket.io": "^2.2.0"
   }
 }
